<resources>
    <string name="app_name" translatable="false">ReStock</string>
    <string name="toilet_paper" translatable="false">tp</string>
    <string name="hand_sanitizer" translatable="false">hs</string>
    <string name="water_bottles" translatable="false">wb</string>

    <string name="null_key" translatable="false">nk</string>
    <string name="type_mod" translatable="false">type</string>
    <string name="color_mod" translatable="false">color</string>
    <string name="hazard_mod" translatable="false">hazard</string>

    <string name="title" translatable="false">RESTOCK</string>
    <string name="description_1">Plan ahead.</string>

    <string name="description_2_1">What would you like to buy?</string>
    <string name="description_2_2">What would you like to buy?</string>

    <string name="description_3" translatable="false"> </string>

    <string name="dir_1">1. Fill out the following information</string>
    <string name="dir_2">Days until you can go shopping again:</string>

    <string name="dir_4">How many people use this item in your household?</string>

    <string name="slider_1" translatable="false">1 Use Daily</string>
    <string name="slider_2" translatable="false">9+ Uses Daily</string>
    <string name="calc">Calculate</string>

    <string name="resource_1">Toilet Paper</string>
    <string name="resource_2">Hand Sanitizer</string>
    <string name="resource_3">Water Bottles</string>

    <string name="coming_soon">More items coming soon.</string>

    <string name="hint_1">Day/s</string>
    <string name="hint_2">Quantity</string>
    <string name="hint_3">Size</string>

    <string name="result_1" translatable="false">Your items will last </string>
    <string name="result_2" translatable="false"> days.</string>
    <string name="result_3_pos" translatable="false">You can shop </string>
    <string name="result_3_pos_2" translatable="false"> days later </string>
    <string name="result_3_pos_3" translatable="false"> than you expected.</string>
    <string name="result_3_neg" translatable="false">You can shop </string>
    <string name="result_3_neg_2" translatable="false"> days earlier </string>

    <string name="dir_3_hs" translatable="false">Current hand sanitizer bottle count:</string>
    <string name="dir_5_hs">2. How many times daily does an average member of your household use hand sanitizer?</string>

    <string name="home">Back to Home</string>

    <string name="amazon_url">https://www.amazon.com/s?k=</string>
    <string name="gmaps_stores_uri">geo:0,0?q=general+stores+near+me</string>
    <string name="gmaps_package">com.google.android.apps.maps</string>

    <string-array name="results_3">
        <item name="result_3_pos" translatable="false">You can shop </item>
        <item name="result_3_neg" translatable="false">You should shop </item>
    </string-array>

    <string-array name="results_4">
        <item name="result_3_pos_2" translatable="false"> days later </item>
        <item name="result_3_neg_2" translatable="false"> days earlier </item>
    </string-array>

    <string-array name="results_5">
        <item name="result_3_pos_3" translatable="false"> than you expected.</item>
        <item name="result_3_neg_3" translatable="false"> than you expected.</item>
    </string-array>

    <string-array name="result_conclusions">
        <item name="results_conclusion_pos"></item>
        <item name="results_conclusion_neg">Holy</item>
    </string-array>

    <string-array name="resources">
        <item name="resources_1">Hand Sanitizer</item>
        <item name="resources_2">Toilet Paper</item>
        <item name="resources_3">Water Bottles</item>
    </string-array>

    <string-array name="resource_dirs">
        <item name="hs">2. How many times daily does an average member of your household use hand sanitizer?</item>
        <item name="tp">2. How many times daily does an average member of your household use the bathroom?</item>
        <item name="wb">2. How many water bottles does an average member of your household drink on a daily basis?</item>
    </string-array>
    <string-array name="resource_hints">
        <item name="hs">Daily hand sanitizer usage, if it\'s used in place of washing your hands, can vary based on daily activites, such as cooking, sports, caring for a sick family member, etc. however 11 times per day is a recommended baseline. </item>
        <item name="tp">The average person uses the bathroom around 7 times per day, however, gender, age, and pre-existing conditions can cause changes to your daily routine.</item>
        <item name="wb">Health authorities suggest the average person drink 64 oz. (1.9 L) of water per day. This is subject to change based on weight and similar variables.</item>
    </string-array>
    <string-array name="current_array">
        <item name="dir_3_hs">Current hand sanitizer bottle count:</item>
        <item name="dir_3_tp">Current toilet paper roll count:</item>
        <item name="dir_3_wb">Current water bottle count:</item>
    </string-array>
    <string-array name="size_array">
        <item name="dir_3_hs">Bottle size:</item>
        <item name="dir_3_tp">Roll size:</item>
        <item name="dir_3_wb">Bottle size:</item>
    </string-array>
    <string-array name="quotes">
        <item name="q1">"Freedom is control in your own life" - Willie Nelson</item>
    </string-array>
    <string-array name="sizes1">
        <item name="hs">oz</item>
        <item name="tp">Sheets</item>
        <item name="wb">oz</item>
    </string-array>
    <string-array name="sizes2">
        <item name="hs">mL</item>
        <item name="tp">nk</item>
        <item name="wb">mL</item>
    </string-array>
</resources>
